tests/ui/traits/const-traits/super-traits-fail.stderr
error[E0277]: the trait bound `S: [const] Foo` is not satisfied
  --> $DIR/super-traits-fail.rs:17:20
   |
LL | impl const Bar for S {}
   |                    ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
